Correctly align right and left placeholders

--- a/src/app/child-dev-project/attendance/add-day-attendance/roll-call/roll-call.component.scss
+++ b/src/app/child-dev-project/attendance/add-day-attendance/roll-call/roll-call.component.scss
@@ -105,3 +105,7 @@
 .full-width {
   width: 100%;
 }
+
+.placeholder {
+  flex-grow: 1;
+}
